--- a/DesafioContar/index.css
+++ b/DesafioContar/index.css
@@ -4,7 +4,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    background-color: rgb(2, 2, 41);
+    background-color: rgb(22, 104, 172);
 }
 h1{
     margin-top: 20px;
@@ -17,10 +17,14 @@ section{
     border-radius: 15px;
     height: auto;
     margin: auto;
-    width: 400px;
+    width: 500px;
     padding: 15px;
     background-color: white;
 }
+input{
+    margin: 10px 0px;
+}
+
 
 h2{
     text-align: center;
@@ -31,16 +35,4 @@ h5{
     color: white;
     margin-top: 20px;
     text-align: center;
-}
-.input{
-    text-align: center;
-}
-.tabuadaEX{
-    text-align: center;
-    margin-top: 20px;
-}
-
-hr{
-    color: black;
-    margin: 10px;
 }
