--- a/testeCalculador/index.css
+++ b/testeCalculador/index.css
@@ -5,9 +5,8 @@
 }
 
 body{
-    background-color: #fff;
+    background-color: whitesmoke;
 }
-
 
 
 header, footer{
@@ -84,4 +83,20 @@ footer{
     width: 100%;
     position: absolute;
     bottom: 0;
+}
+
+button{
+    cursor: pointer;
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(1, 159, 202);
+    border: none;
+    border-radius: 10px;
+    color: white;
+    padding: 4px;
+}
+
+button:hover{
+    transition: 200ms;
+    background-color: orange;
 }
